modules/security-group/main.tf
resource "aws_security_group" "my-sg" {
  name = var.sg_name
  vpc_id = var.vpc-id

  ingress {
   from_port = 22
   to_port = 22
   protocol = "tcp"
   cidr_blocks = [var.my-ip]
  }
  ingress {
   from_port = 8080
   to_port = 8080
   protocol = "tcp"
   cidr_blocks = [var.my-ip]
  }
  egress {
   from_port = 8080
   to_port = 8080
   protocol = "-1"
   cidr_blocks = ["0.0.0.0/0"]
  }
}

output "sg-id" {
  value = aws_security_group.my-sg.id
}
